unpackaged/main/default/objects/splashthat__Log__c/fields/splashthat__JSON__c.field-meta.xml
<CustomField>
    <fullName>splashthat__JSON__c</fullName>
    <description>JSON String (for debugging API calls)</description>
    <label>JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>