unpackaged/main/default/objects/splashthat__Log__c/fields/splashthat__Message__c.field-meta.xml
<CustomField>
    <fullName>splashthat__Message__c</fullName>
    <description>Message for this action</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>