unpackaged/main/default/objects/splashthat__Log__c/fields/splashthat__ObjectIDs__c.field-meta.xml
<CustomField>
    <fullName>splashthat__ObjectIDs__c</fullName>
    <description>Comma delimited list of Object ID&#39;s affected by this action</description>
    <label>Object IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>