unpackaged/main/default/objects/splashthat__Log__c/fields/splashthat__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>splashthat__ObjectName__c</fullName>
    <description>Object Name being saved in this action (for DML)</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>