unpackaged/main/default/objects/splashthat__Log__c/fields/splashthat__User__c.field-meta.xml
<CustomField>
    <fullName>splashthat__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that initiated this action</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Logs</relationshipName>
    <type>Lookup</type>
</CustomField>