unpackaged/main/default/objects/splashthat__Log__c/listViews/splashthat__All.listView-meta.xml
<ListView>
    <fullName>splashthat__All</fullName>
    <columns>NAME</columns>
    <columns>splashthat__ClassName__c</columns>
    <columns>splashthat__Level__c</columns>
    <columns>splashthat__Message__c</columns>
    <columns>splashthat__User__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>